# gfloat

./: .readthedocs.yaml  README.md  pyproject.toml
doc/: 01-decode.ipynb
docs/: conf.py  index.rst
docs/source/: conf.py  index.rst
notebooks/: 01-decode.ipynb
src/gfloat/: __init__.py  cast.py  decode.py  formats.py  types.py
test/: test_decode.py
