[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ['gfloat']
package-dir = {"" = "src"}

[project]
name =  "gfloat"
version = "0.0.1"
authors = [
    {name = "Andrew Fitzgibbon", email = "awf@fitzgibbon.ie"},
]
description = "Generic floating point handling in Python"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
]
requires-python = ">=3.8.1"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
# version = {attr = "gfloat.VERSION"} # Wow: https://github.com/pypa/setuptools/issues/1724
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
test = [
    "black==23.3.0",
    "pre-commit==3.3.1",
    "pylint==2.17.4",
    "pytest==7.3.1",
]

[tool.black]
line-length = 88
fast = true
